--- a/html/skin.html
+++ b/html/skin.html
@@ -283,21 +283,21 @@
 				<div class="col-md-8 order-md-1">
 					<h5><b>사진 업로드</b> 해주세요</h5>
 					<div class="form-image-box">
-						<div class="mb-3">
+						<div>
 							<div class="input-group">
 								<label for="" class=""><b>정면 사진</b><br/> 1장을 올려주세요.</label>
 								<input type="file" name="front_img_src" id="front_img_src" accept="image/*" style="display: none;">
 								<div class="front-img-btn" id="front-img-btn" onclick="imgOnclick('front_img_src')"></div>
 							</div>
 						</div>
-						<div class="mb-3">
+						<div>
 							<div class="input-group">
 								<label for="" class=""><b>좌측 사진</b><br/> 1장을 올려주세요.</label>
 								<input type="file" name="left_img_src" id="left_img_src" accept="image/*" style="display: none;">
 								<div class="front-img-btn" onclick="onclick=document.all.file.click()"></div>
 							</div>
 						</div>
-						<div class="mb-3">
+						<div>
 							<div class="input-group">
 								<label for="" class=""><b>우측 사진</b><br/> 1장을 올려주세요.</label>
 								<input type="file" name="right_img_src" id="right_img_src" accept="image/*" style="display: none;">
