--- a/html/skin_original.html
+++ b/html/skin_original.html
@@ -9,7 +9,7 @@
     <title>피부 분석 이벤트</title>
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../css/wireframe.css">
+	<link rel="stylesheet" href="../css/wireframe_original.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     
     
